# engineer-career-agent

./: .env.example  .gitignore  Architecture.md  README.md  README.requirement.md  handler.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  main_agent.py
app/agents/middleware/: __init__.py  filesystem.py  subagent.py  todolist.py
app/agents/subagents/: __init__.py  domain.py  foundation.py  technical.py
app/api/: __init__.py  dependencies.py
app/api/routes/: diagnosis.py  profile.py
app/application/: __init__.py
app/application/dto/: __init__.py  diagnosis_dto.py  profile_dto.py
app/application/services/: __init__.py  llm_service.py
app/application/use_cases/: __init__.py
app/domain/constants/: __init__.py  diagnosis_questions.py
app/domain/entities/: __init__.py  diagnosis.py  learner.py  learning_roadmap.py  roadmap.py  structured_diagnosis.py
app/domain/repositories/: __init__.py  diagnosis_repository.py  (+3 more)
app/infrastructure/: __init__.py
app/llm/: __init__.py  factory.py
app/models/: __init__.py  diagnosis.py  profile.py
app/presentation/: __init__.py  main.py
app/storage/: __init__.py  file_backend.py  schemas.py
app/tools/: __init__.py  assessment.py  roadmap.py
docs/: action_history.md  agents_requirement.md  deploy_guide.md
tests/: __init__.py  conftest.py
tests/test_agents/: __init__.py
tests/test_api/: __init__.py  test_health.py
tests/test_storage/: __init__.py  test_file_backend.py
tests/test_tools/: __init__.py  test_assessment.py  test_roadmap.py
(+56 files in other folders)
